b) "cluster.size" argument are added.
c) New internal function predict.kmeans.fd.

3) Bug corrected in internal function pred2glm2boost(), it is used for predictions of classiff.DD outputs

4) New functions: Ops.ldata, Math.ldata, Summary.ldata, mean.ldata and mean.fdata (deprecated ldata.mean, mfdata.mean)

5) Modifications in ldata.cen



Version 2.0.0 is a major release with several new features, including:

inprod.fdata and metric.lp funcitons addapted to parallel backend.

zzz.R file includes .onAttach() function (welcome package message)

ops.fda.usc.R file includes ops.fda.usc() function that control general parameters of packages such as ncores argument.

par.fda.usc.R file is deleted: par.fda.usc is now an internal object created and modified by ops.fda.usc()

New function metric.DTW computes distances between functional data using dynamic time warping (DTW)
metric.WDTW and metric.TWED are extended version. (not parallelized yet, pending to completed the Rd document)

New functions S.LPR and S.LCR for computing smoothing matrix S by nonparametric method.

The functions anova.hetero, anova.onefactor, anova.RPm, influence.fdata, influence.quan, min.basis, min.np and unlist.fdata
are renamed fanova.hetero, fanova.onefactor, fanova.RPm, influence.fregre.fd, influence_quan, optim.basis, optim.np and unlist_fdata

optim.np (deprecated min.np)  allows Local polynomial regression with correlated errors using the new parameter (correl=TRUE) 
Kernel.correlated new functions

New class: "ldata": ldata() class definition.
Redefined metric.ldata, it computes distance for ldata object: list with m functional data "mfdata" and univariate data included in a data frame called "df"
New function metric.mfdata: compute distance for mfdata class object:  list with m functional data

plot.ldata: plots for ldata object, it allows drawing using a color bar.
plot.mfdata: plot for  mfdata object (internal function, pending to completed the Rd document)