@@ -1,69 +1,3 @@
-else {
-if (basis.x[[vfunc[1]]]$type == "pc")
-z$call[[1]] = "fregre.pc"
-if (basis.x[[vfunc[1]]]$type == "pls")
-z$call[[1]] = "fregre.pls"
-}
-class(z) <- c("fregre.fd", "fregre.lm")
-rdf <- n - df
-sr2 <- sum(e^2)/rdf
-r2 <- 1 - sum(e^2)/sum(ycen^2)
-r2.adj <- 1 - (1 - r2) * ((n - 1)/rdf)
-GCV <- sum(e^2)/(n - df)^2
-z$terms <- terms
-z$residuals <- drop(e)
-z$fitted.values <- yp
-z$y <- y
-z$rank <- df
-z$df.residual <- rdf
-Z = cbind(rep(1, len = n), Z)
-colnames(Z)[1] = "(Intercept)"
-std.error = sqrt(diag(S) * sr2)
-t.value = coefs/std.error
-p.value = 2 * pt(abs(t.value), n - df, lower.tail = FALSE)
-coefficients <- cbind(coefs, std.error, t.value, p.value)
-colnames(coefficients) <- c("Estimate", "Std. Error",
-"t value", "Pr(>|t|)")
-z$coefs <- coefficients
-class(z) <- "lm"
-z$it <- it
-}
-for (i in 1:length(vfunc)) {
-if (bsp1)
-beta.l[[vfunc[i]]] = fd(z$coefficients[name.coef[[vfunc[i]]]],
-basis.b[[vfunc[i]]])
-else {
-if (class(data[[vfunc[i]]])[1] == "fdata") {
-beta.est <- z$coefficients[name.coef[[vfunc[i]]]] *
-vs.list[[vfunc[i]]]
-beta.est$data <- colSums(beta.est$data)
-beta.est$names$main <- "beta.est"
-beta.est$data <- matrix(as.numeric(beta.est$data),
-nrow = 1)
-beta.est$names$main <- "beta.est"
-beta.est$data <- matrix(as.numeric(beta.est$data),
-nrow = 1)
-if (basis.x[[vfunc[i]]]$type == "pls") {
-if (basis.x[[vfunc[i]]]$norm) {
-sd.X <- sqrt(apply(data[[vfunc[i]]]$data,
-2, var))
-beta.est$data <- beta.est$data/sd.X
-}
-}
-beta.l[[vfunc[i]]] <- beta.est
-}
-else {
-beta.est <- z$coefficients[name.coef[[vfunc[i]]]] *
-t(vs.list[[vfunc[i]]])
-beta.est <- colSums(beta.est)
-beta.l[[vfunc[i]]] <- fd(beta.est, basis.x[[vfunc[i]]]$harmonics$basis)
-}
-}
-}
-z$sr2 <- sum(e^2)/z$df.residual
-z$Vp = z$sr2 * S
-z$beta.l = beta.l
-z$formula = pf
 z$mean = mean.list
 z$formula.ini = formula
 z$basis.x = basis.x
@@ -510,3 +444,69 @@ S=S.NW(tt,h=0.15)
 var.e<-Var.e(mdata,S)
 var.y<-Var.y(mdata,S)
 var.y2<-Var.y(mdata,S,var.e) #the same
+<!-- ```{r example} -->
+<!-- ## basic example code -->
+<!--
+library(roxygen2)
+setwd("C:/Users/moviedo/github/fda.usc/")
+getwd()
+pkgbuild::compile_dll()
+roxygenize()
+devtools::document()
+#devtools::check("C:/Users/moviedo/github/fda.usc",args="--as-cran",manual=TRUE)
+#devtools::check(args="--as-cran",manual=TRUE)
+devtools:::install()
+<img src="inst/figures/baseplot.png" height="300"/>
+-->
+getwd()
+devtools::check(args="--as-cran",manual=TRUE)
+50/30
+30/50
+data(tecator)
+cutpoint <- 18
+tecator$y$class <-factor(ifelse(tecator$y$Fat<cutpoint,0,1))
+table(tecator$y$class )
+x<-tecator[[1]]
+x2<-fdata.deriv(tecator[[1]],2)
+data<- list("df"=tecator$y,x=x,x2=x2)
+formula<- formula(class~x+x2)
+# ex: default excution of classifier (no k-fold CV)
+classif="classif.glm";
+out.default<-classif.kfold(formula, data, classif = classif)
+out.default
+out.default$param.min
+out.default$params.error
+summary(out.default)
+formula<- formula(class~x)
+# ex: default excution of classifier (no k-fold CV)
+classif="classif.glm";
+out.default<-classif.kfold(formula, data, classif = classif)
+out.default
+out.default$param.min
+out.default$params.error
+summary(out.default)
+out.default$param.min
+#' # ex: Number of PC basis elements selected by 10-fold CV
+#' # Logistic classifier
+kfold = 10
+param.kfold <- list("x"=list("pc"=c(1:8)),"x2"=list("pc"=c(1:8)))
+out.kfold1 <- classif.kfold(formula, data, classif = classif,
+kfold = kfold,param.kfold = param.kfold)
+out.kfold3$param.min
+out.kfold1$param.min
+min(out.kfold31params.error)
+min(out.kfold1$params.error)
+out.kfold1$params.error
+min(out.kfold1$params.error)
+formula
+param.kfold <- list("x"=list("pc"=c(1:8)))
+out.kfold1 <- classif.kfold(formula, data, classif = classif,
+kfold = kfold,param.kfold = param.kfold)
+classif
+classif <- "classif.adaboost"
+out.kfold1 <- classif.kfold(formula, data, classif = classif,
+kfold = kfold,param.kfold = param.kfold)
+getwd()
+pkgbuild::compile_dll()
+roxygenize()
+devtools::document()
